syntax ="proto3";

option go_package = "generated/products";

package product;

message CreateProductRequest {
    string name=1;
    string description=2;
    string category_id = 3;
    double price=4;
    int32 stock=5;
    string images = 6;
    Discount discount=7;
}

message Discount {
    bool status=1;
    double discount_price=2;
}

message CreateProductResponse {
    bool success=1;
    string message = 2;    
}

message UpdateProductRequest {
    string id = 1;
    string name=2;
    string description=3;
    string images=4;
    double price=5;
    int32 stock=6;
    Discount discount=7;
}

message UpdateProductResponse {
    string name=1;
    string description=2;
    repeated string images=3;
    float price=4;
    int32 stock=5;
    Discount discount=6;
}

message DeleteProductRequest {
    string id=1;
}

message DeleteProductResponse {
    bool success=1;
    string message = 2;
}


message GetAllProductRequest { 
    string name = 1;
    string category = 2;
    bool discount = 3;
    int64 price_order = 4;
    int64 rating_order = 5;
    int64 comment_order = 6;
    bool newest = 7;
    int64 limit = 8;
    int64 page  = 9;
}

message GetAllProductResponse { 
    repeated Product products=1;
    int64 total=2;
    int64 limit=3;
    int64 offset=4;

}

message Product {
    string id=1;
    string name=2;
    string description=3;
    repeated string images=4;
    double price=5;
    Discount discount=6;
    int32 stock=7;
}

message GetByIdProductRequest {
    string id=1;
}

message GetByIdProductResponse {
    string id=1;
    string name=2;
    string description=3;
    string images=4;
    double price=5;
    Discount discount=6;
    int32 stock=7;
    string created_at=9;
}
message OrderRequest {
    string product_id = 1;
    string user_id = 2;
}

message OrderResponse {
    string product_id=1;
}

message GetOrderByPIdRequest {
    string product_id = 1;
    int64 limit = 2;
    int64 page  = 3;
}

message GetOrderByPIdResponse {
    repeated Order orders = 1;
    int64 total = 2;
    int64 limit = 3;
    int64 offset = 4;
}

message Order {
    string id = 1;
    string user_id = 2;
    string purchase_date = 3;
    int32 quantity=4;
    double price=5;
}

message AddToBasketRequest {
    string product_id = 1;
    string user_id = 2;
    string purchase_date = 3;
    int32 quantity=4;
    double price=5;
}

message  AddToBasketResponse {
    bool status = 1;
    string  message = 2;
}

message BasketResponse {
    string userId = 1;
    repeated Order products = 2;
}

message GetBasketRequest {
    string user_id = 1;
}

message DeleteBasketRequest {
    string product_id = 1;
    string user_id = 2;
}

message DeleteBasketResponse {
    bool success=1;
    string message = 2;
}

message GetRecommendationsResponse {
    repeated Product products = 1;
}

message Void {}

message GetPurchasedPRequest {
    string user_id = 1;
    int64 limit = 2;
    int64 page  = 3;
}

message GetPurchasedPResponse {
    repeated Order orders = 1;
    int64 total = 2;
    int64 limit = 3;
    int64 page = 4;
}